istio-traffic-management.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: htmlapp-service-vs
spec:
  hosts:
    - "htmlapp-service.tahs.local"
    # - "htmlapp-service.html-app.svc.cluster.local"
  gateways:
    - htmlapp-deployment-gw
  http:
    - route:
        - destination:
            host: htmlapp-service.html-app.svc.cluster.local
            # subset: htmlapp-deployment
            port:
              number : 80
        #   weight: 0
        # - destination:
        #     host: red-green-service.traffic-shifting.svc.cluster.local
        #     subset: green-deployment
        #   weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: htmlapp-service-dr
spec:
  host: htmlapp-service.html-app.svc.cluster.local
  subsets:
    - name: htmlapp-deployment
      labels:
        app: htmlapp-deployment
        # deployment: red-deployment
    # - name: green-deployment
    #   labels:
    #     app: red-green-deployment
    #     deployment: green-deployment

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: htmlapp-deployment-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "htmlapp-service.tahs.local"
